--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start"
   },
+  "browserslist": [">0.3%", "not ie 11", "not dead", "not op_mini all"],
   "dependencies": {
     "classnames": "^2.2.6",
     "next": "^10.0.0",
