--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "build": "next build",
     "start": "next start"
   },
-  "browserslist": [">0.3%", "not ie 11", "not dead", "not op_mini all"],
+  "browserslist": [
+    ">0.3%",
+    "not ie 11",
+    "not dead",
+    "not op_mini all"
+  ],
   "dependencies": {
     "classnames": "^2.2.6",
     "next": "^10.0.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sass": "^1.32.0"
